trunk/Archive2/99/a55e383ab817fa/output
main.cpp:2:22: error: cannot deduce type of initializer list because std::initializer_list was not found; include <initializer_list>
    auto init_list = {1, 2};
                     ^
1 error generated.
