trunk/Archive2/99/a55e383ab817fa/main.cpp
int main() {
    auto init_list = {1, 2};
}
